# lardataobj

./: CMakeLists.txt  CMakePresets.json  README.md
lardataobj/: CMakeLists.txt
lardataobj/AnalysisBase/: BackTrackerMatchingData.h  CMakeLists.txt  Calorimetry.cxx  Calorimetry.h  CosmicTag.cxx  CosmicTag.h  FlashMatch.cxx  FlashMatch.h  MVAOutput.cxx  MVAOutput.h  MVAPIDResult.h  ParticleID.cxx  ParticleID.h  ParticleID_VariableTypeEnums.h  T0.cxx  T0.h  classes.h  classes_def.xml
lardataobj/MCBase/: CMakeLists.txt  MCBaseException.h  MCDataHolder.h  MCHit.h  MCHitCollection.cxx  MCHitCollection.h  MCLimits.h  MCMiniPart.h  MCParticleLite.h  MCShower.cxx  MCShower.h  MCStep.h  MCTrack.cxx  MCTrack.h  MCWire.h  MCWireCollection.cxx  MCWireCollection.h  classes.h  classes_def.xml
lardataobj/OpticalDetectorData/: CMakeLists.txt  ChannelData.h  ChannelDataGroup.h  FIFOChannel.h  OpticalRawDigit.h  PMTTrigger.h  classes.h
lardataobj/RawData/: AuxDetDigit.cxx  AuxDetDigit.h  BeamInfo.cxx  BeamInfo.h  CMakeLists.txt  DAQHeader.cxx  DAQHeader.h  ExternalTrigger.cxx  ExternalTrigger.h  OpDetPulse.cxx  OpDetPulse.h  OpDetWaveform.h  RDTimeStamp.h  RawDigit.cxx  RawDigit.h  TriggerData.cxx  TriggerData.h  classes.h  raw.cxx  raw.h
lardataobj/RecoBase/: CMakeLists.txt  Cluster.cxx  Cluster.h  Edge.cxx  Edge.h  EndPoint2D.cxx  EndPoint2D.h  Event.cxx  Event.h  Hit.cxx  Hit.h  MCSFitResult.h  OpFlash.cxx  OpFlash.h  OpHit.cxx  OpHit.h  OpWaveform.cxx  OpWaveform.h  PCAxis.cxx  PCAxis.h  PFParticle.cxx  PFParticle.h  PFParticleMetadata.cxx  PFParticleMetadata.h  PointCharge.h  Seed.cxx  Seed.h  Shower.cxx  Shower.h  Slice.cxx  Slice.h  SpacePoint.cxx  SpacePoint.h  Track.cxx  Track.h  TrackFitHitInfo.h  TrackHitMeta.h  TrackTrajectory.cxx  TrackTrajectory.h  TrackTrajectory.tcc  (+16 more)
lardataobj/RecoBase/AssnsDicts/: CMakeLists.txt  classes.h  classes_def.xml
lardataobj/RecoBase/TrackingDicts/: CMakeLists.txt  classes.h
lardataobj/Simulation/: AuxDetHit.h  AuxDetSimChannel.cxx  AuxDetSimChannel.h  BeamGateInfo.h  BeamTypes.h  CMakeLists.txt  GeneratedParticleInfo.h  OpDetBacktrackerRecord.cxx  OpDetBacktrackerRecord.h  ParticleAncestryMap.cxx  ParticleAncestryMap.h  SimChannel.cxx  SimChannel.h  SimDriftedElectronCluster.h  SimEnergyDeposit.h  SimEnergyDepositLite.h  SimPhotons.cxx  SimPhotons.h  SupernovaTruth.cxx  SupernovaTruth.h  classes.h  classes_def.xml  sim.h
lardataobj/Simulation/Compatibility/: CMakeLists.txt  README.md  load_fixit_file.cxx  simIDE_streamer_info.root
lardataobj/Utilities/: BitMask.h  BitMask.tcc  DataIOmanip.h  FlagSet.h  FlagSet.tcc  LazyVector.h  SumSecondFunction.h  VectorMap.h  sparse_vector.h
test/RawData/: CMakeLists.txt  RawDigit_test.cc  raw_test.cc
test/RecoBase/: CMakeLists.txt  Cluster_test.cc  Edge_test.cc  Hit_test.cc  PointCharge_test.cc  TrackTrajectory_test.cc  TrajectoryPointFlags_test.cc  Trajectory_test.cc  Wire_test.cc
test/Utilities/: FlagSet_test.cc  LazyVector_test.cc  sparse_vector_test.cc
ups/: product_deps
